
PIG-3444: CONCAT with 2+ input parameters fail (lbendig via daijy)

PIG-3117: A debug mode in which pig does not delete temporary files (ihadanny via cheolsoo)

PIG-3484: Make the size of pig.script property configurable (cheolsoo)
 
OPTIMIZATIONS

PIG-3882: Multiquery off mode execution is not done in batch and very inefficient (rohini)
 
BUG FIXES

PIG-4005: depend on hbase-hadoop2-compat rather than hbase-hadoop1-compat when hbaseversion is 95 (daijy)

PIG-4021: Fix TestHBaseStorage failure after auto local mode change (PIG-3463) (daijy)

PIG-4029: TestMRCompiler is broken after PIG-3874 (daijy)

PIG-4030: TestGrunt, TestPigRunner fail after PIG-3892 (daijy)

PIG-4017: NPE thrown from JobControlCompiler.shipToHdfs (cheolsoo)

PIG-3975: Multiple Scalar reference calls leading to missing records (knoguchi via rohini) 

PIG-3997: Issue on Pig docs: Testing and Diagnostics (zjffdu via cheolsoo)

PIG-3998: Documentation fix: invalid page links, wrong Groovy udf example (lbendig via cheolsoo)

PIG-4000: Minor documentation fix for PIG-3642 (lbendig via cheolsoo)

PIG-3991: TestErrorHandling.tesNegative7 is broken in trunk/branch-0.13 (cheolsoo)

PIG-3990: ant docs is broken in trunk/branch-0.13 (cheolsoo)

PIG-3989: PIG_OPTS does not work with some version of HADOOP (daijy)

PIG-3739: The Warning_4 e2e test is broken in trunk (aniket486)

PIG-3976: Typo correction in JobStats breaks Oozie (rohini)

PIG-3874: FileLocalizer temp path can sometimes be non-unique (chitnis via cheolsoo)

PIG-3967: Grunt fail if we running more statement after first store (daijy)

PIG-3915: MapReduce queries in Pigmix outputs different results than Pig's (keren3000 via daijy)

PIG-3955: Remove url.openStream() file descriptor leak from JCC (aniket486)

PIG-3958: TestMRJobStats is broken in 0.13 and trunk (aniket486)

PIG-3949: HiveColumnarStorage compile failure with Hive 0.14.0 (daijy)

PIG-3960: Compile fail against Hadoop 2.4.0 after PIG-3913 (daijy)
